--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                     Lorem quis sunt magna dolor consectetur aliqua officia laborum reprehenderit
                                 </p>
                                 <div id="main_read1">
-                                    <h4>Read more</h4>
+                                    <h4 id="main_h4">Read more</h4>
                                     <img src="./images/Icon.svg" alt="">
                                 </div>
                             </div>
@@ -62,7 +62,7 @@
                                     Lorem quis sunt magna dolor consectetur aliqua officia laborum reprehenderit
                                 </p>
                                 <div id="main_read2">
-                                    <h4>Read more</h4>
+                                    <h4 id="main_h4_2">Read more</h4>
                                     <img src="./images/Icon.svg" alt="">
                                 </div>
                             </div>
@@ -173,5 +173,6 @@
             </div>
 
      <script src="./js/index.js"></script>
+     <script src="./js/masalalar.js"></script>
 </body>
 </html>
