--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         </div>
                     </div>
 
-                    <img src="./images/bmw_picture.webp" alt="bmw rasmi" width="534px" height="534px">
+                    <img src="./images/car rasmi.jpg" alt="bmw rasmi" width="534px" height="534px">
             </main>
 
 
@@ -161,6 +161,12 @@
                     <a href="http://#"><img src="./images/Icon (2).svg" alt="twitter"></a>
                     <a href="http://#"><img src="./images/Icon (3).svg" alt="facebook"></a>
                     <a href="http://#"><img src="./images/Icon (4).svg" alt="instagram"></a>
+                </div>
+                <div id="footer_icons_2">
+                    <a href="http://#"><img src="./images/Icon (5).svg" alt="linkidin"></a>
+                    <a href="http://#"><img src="./images/Icon (6).svg" alt="twitter"></a>
+                    <a href="http://#"><img src="./images/Icon (7).svg" alt="facebook"></a>
+                    <a href="http://#"><img src="./images/Icon (8).svg" alt="instagram"></a>
                 </div>
                 <h5 id="footer_h5">Nostrud aliquip laboris
                     © 2020 Wirefigma
